litte more near the end.

--- a/css/application.css
+++ b/css/application.css
@@ -63,3 +63,9 @@
 .input-field textarea.valid:focus~.helper-text::after {
     color: #26a69a;
 }
+
+@media screen and (min-width: 992px) {
+    #workspace {
+       padding-left: 340px;
+    }
+  }
