--- a/css/application.css
+++ b/css/application.css
@@ -1,14 +1,18 @@
+body{
+    overflow: hidden;
+}
 
-.dropdown-content li>a, .dropdown-content li>span {
-    font-size: 16px;
-    color: slategrey;
-    display: block;
-    line-height: 22px;
-    padding: 14px 16px;
+.dropdown-content li > a,
+.dropdown-content li > span {
+  font-size: 16px;
+  color: slategrey;
+  display: block;
+  line-height: 22px;
+  padding: 14px 16px;
 }
 
 ​path {
-    fill: white;
+  fill: white;
 }
 
 /* Inactive/Active Default input field color */
@@ -16,14 +20,14 @@
 .input-field input[type]:focus:not([readonly]),
 .input-field textarea:not([readonly]),
 .input-field textarea:focus:not([readonly]) {
-    border-bottom: 1px solid #01579b;
-    box-shadow: 0 1px 0 0 #01579b;
+  border-bottom: 1px solid #01579b;
+  box-shadow: 0 1px 0 0 #01579b;
 }
 
 /* Inactive/Active Default input label color */
-.input-field input[type]:focus:not([readonly])+label,
-.input-field textarea:focus:not([readonly])+label {
-    color: #01579b;
+.input-field input[type]:focus:not([readonly]) + label,
+.input-field textarea:focus:not([readonly]) + label {
+  color: #01579b;
 }
 
 /* Active/Inactive Invalid input field colors */
@@ -31,18 +35,18 @@
 .input-field input[type].invalid:focus,
 .input-field textarea.invalid,
 .input-field textarea.invalid:focus {
-    border-bottom: 1px solid #e57373;
-    box-shadow: 0 1px 0 0 #e57373;
+  border-bottom: 1px solid #e57373;
+  box-shadow: 0 1px 0 0 #e57373;
 }
 
 /* Active/Inactive Invalid input label color */
-.input-field input[type].invalid:focus+label,
-.input-field input[type].invalid~.helper-text::after,
-.input-field input[type].invalid:focus~.helper-text::after, 
-.input-field textarea.invalid:focus+label,
-.input-field textarea.invalid~.helper-text::after,
-.input-field textarea.invalid:focus~.helper-text::after {
-    color: #e57373;
+.input-field input[type].invalid:focus + label,
+.input-field input[type].invalid ~ .helper-text::after,
+.input-field input[type].invalid:focus ~ .helper-text::after,
+.input-field textarea.invalid:focus + label,
+.input-field textarea.invalid ~ .helper-text::after,
+.input-field textarea.invalid:focus ~ .helper-text::after {
+  color: #e57373;
 }
 
 /* Active/Inactive Valid input field color */
@@ -50,22 +54,22 @@
 .input-field input[type].valid:focus,
 .input-field textarea.valid,
 .input-field textarea.valid:focus {
-    border-bottom: 1px solid #26a69a;
-    box-shadow: 0 1px 0 0 #26a69a;
+  border-bottom: 1px solid #26a69a;
+  box-shadow: 0 1px 0 0 #26a69a;
 }
 
 /* Active/Inactive Valid input label color */
-.input-field input[type].valid:focus+label,
-.input-field input[type].valid~.helper-text::after,
-.input-field input[type].valid:focus~.helper-text::after,
-.input-field textarea.valid:focus+label,
-.input-field textarea.valid~.helper-text::after,
-.input-field textarea.valid:focus~.helper-text::after {
-    color: #26a69a;
+.input-field input[type].valid:focus + label,
+.input-field input[type].valid ~ .helper-text::after,
+.input-field input[type].valid:focus ~ .helper-text::after,
+.input-field textarea.valid:focus + label,
+.input-field textarea.valid ~ .helper-text::after,
+.input-field textarea.valid:focus ~ .helper-text::after {
+  color: #26a69a;
 }
 
 @media screen and (min-width: 992px) {
-    #main {
-       padding-left: 300px;
-    }
+  #main {
+    padding-left: 300px;
   }
+}
